# diffquantum

./: .gitignore  CMakeLists.txt  FD_ibmsim.py  GRAPE-Torch_with_rwa.ipynb  IBMQSimulator.py  IBM_Pulse.ipynb  LICENSE  OursPulse.py  README.md  VQE_qiskit.py  compare_our_grape_with_qutip.py  demo_maxcut.py  diffqc.cc  exp_h2_dfo.py  exp_h2_ours.py  exp_qaoa_dfo.py  grape.py  ibmop.py  ibmsim_icml22.py  ibmsim_icml22_test.py  lab-grape.py  logger.py  main_grape.py  main_ibmsim.py  main_nomod.py  maxcut_ng.py  maxcut_pennylane.py  ours_icml22.py  ours_nomod_qaoa.py  ours_spectral.py  plot_FD_optimize.py  plot_FD_sanity_check.py  plot_TIM.ipynb  plot_TIM.py  plot_control.ipynb  plot_control.py  plot_control_grape.py  plot_distribution.ipynb  plot_energy.py  plot_finite_diff.py  (+15 more)
legacy/: FD_ibmsim.py  exp_h2_dfo.py  exp_h2_ours.py  ours_spectral.py
logs/text/icml22_h2/: Circuit_1.txt  Circuit_2.txt  Ours360_1.txt  Ours720_1.txt
qcl/: README.md  example_classifier.ipynb  example_regressor.py  optimizer.py  qcl.py  qcl_regressor.py  qsimulator.py
torchNode/: qnode.py
